fix: toolbar unnecessarily eats too much width

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -226,6 +226,8 @@
 
   .App-top-bar {
     z-index: var(--zIndex-layerUI);
+    display: flex;
+    justify-content: center;
   }
 
   .App-bottom-bar {
